--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chatapp-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "emoji-mart": "^2.11.1",
     "normalize.css": "^8.0.1",
