--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "emoji-mart": "^2.11.1",
     "normalize.css": "^8.0.1",
     "query-string": "^6.8.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-emoji": "^0.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-scroll-to-bottom": "^1.3.2",
